--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.3"
   }
 }
