--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "node-express-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
