--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "slugify": "^1.6.6"
   }
 }
