--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
